Need folder to file relation. Also abstraction layer to query this.

--- a/MVP/BeautfulVideoPlayer/VideoFolders2/VideoFolders.csproj
+++ b/MVP/BeautfulVideoPlayer/VideoFolders2/VideoFolders.csproj
@@ -132,6 +132,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeepFileScanner.cs" />
     <Compile Include="FileLibrary.cs" />
     <Compile Include="FileScanState.cs" />
     <Compile Include="FileSystemHelper.cs" />
